fix: text more readable (temp?)

--- a/src/components/ItemCard/itemCard.css
+++ b/src/components/ItemCard/itemCard.css
@@ -8,4 +8,5 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    color: black;
 }
